<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    android:background="@color/moradoOscuro">

    <androidx.cardview.widget.CardView
        android:id="@+id/crdRespuesta"
        android:layout_width="380dp"
        android:layout_height="300dp"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/rosa"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/lblFecha"
                android:textSize="20sp"
                android:layout_marginBottom="40dp"/>

            <TextView
                android:id="@+id/etFechaGuardada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="40dp"/>

            <EditText
                android:id="@+id/etFecha"
                android:layout_width="300dp"
                android:layout_height="46dp"
                android:textColor="@color/black"
                android:hint="@string/hintFecha"
                android:textColorHint="@color/greygrey"
                android:focusable="false"
                android:clickable="false"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btnEjercicio1"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:text="@string/ex1"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEjercicio2"/>

    <Button
        android:id="@+id/btnEjercicio2"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:text="@string/ex2"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/btnEjercicio1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

  </androidx.constraintlayout.widget.ConstraintLayout>