<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@color/moradoOscuro">

    <androidx.cardview.widget.CardView
        android:id="@+id/crdPregunta"
        android:layout_width="380dp"
        android:layout_height="380dp"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/morado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvPuntuacion"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"/>
            <TextView
                android:id="@+id/tvPregunta"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="200dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdRespuesta"
        android:layout_width="380dp"
        android:layout_height="80dp"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/rosa"
        app:layout_constraintTop_toBottomOf="@id/crdPregunta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            
            <EditText
                android:id="@+id/etRespuesta"
                android:layout_width="300dp"
                android:layout_height="46dp"
                android:textColor="@color/black"
                android:hint="@string/hintPregunta"
                android:textColorHint="@color/greygrey"
                android:inputType="text"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:text="@string/btnEnviarRespuesta"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/crdRespuesta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnEjercicio1"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:text="@string/ex1"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEjercicio3"/>

    <Button
        android:id="@+id/btnEjercicio3"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:text="@string/ex3"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/btnEjercicio1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>